<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chatbackground"
    tools:context=".Domains.ArtificialIntellegenceDevelopment.Reinforcement_Learning.Reinforcement_Learning_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@android:color/transparent"
        android:scrollbarTrackVertical="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:padding="7dp"
        android:id="@+id/tol1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Reinforcement_Learning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Reinforcement_Learning_info_text"
                android:justificationMode="inter_word"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/RL_Libraries_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RL_Libraries_info_text"
                android:justificationMode="inter_word"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RL_Libraries_Recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scrollbars="horizontal"
                tools:listitem="@layout/ml_libraries_recycleview" />
            <TextView
                android:id="@+id/RL_Algorithms_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RL_Algorithms_info_text"
                android:justificationMode="inter_word"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/RL_Applications_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RL_Applications_info_text"
                android:justificationMode="inter_word"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>