<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chatbackground"
    tools:context=".Domains.ArtificialIntellegenceDevelopment.Artificial_Intelligence_Learning.AI_Learning_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@android:color/transparent"
        android:scrollbarTrackVertical="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:padding="7dp"
        android:id="@+id/tol1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AI_Learning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ai_Learning_info_text"
                android:justificationMode="inter_word"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/AI_Python_Learning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ai_Python_Learning_info_text"
                android:justificationMode="inter_word"
                android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="195dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/AI_Python_Image"
                        android:layout_width="wrap_content"
                        android:layout_height="160dp"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/python1" />

                    <TextView
                        android:id="@+id/AI_Python_Text"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#28b0ff"
                        android:justificationMode="inter_word"
                        android:text="Python Programming"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
            <!--            R Programming cardview-->
            <TextView
                android:id="@+id/AI_R_Programming_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ai_R_Programming_info_text"
                android:justificationMode="inter_word"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="195dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/AI_R_Image"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/r_programming" />

                    <TextView
                        android:id="@+id/AI_R_Text"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="#28b0ff"
                        android:justificationMode="inter_word"
                        android:text="R Programming"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
            <!--            Java Programming cardview-->

            <TextView
                android:id="@+id/AI_Java_Programming_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ai_Java_Programming_info_text"
                android:justificationMode="inter_word"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/AI_java_cplus_Recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scrollbars="horizontal"
                tools:listitem="@layout/ai_development_ailearning_recyclerview" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>